# opengl_studies

./: .gitignore  ArrayBuffer.cpp  ArrayBuffer.h  CMakeLists.txt  CMakeLists.txt.ubuntu.txt  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  MeshFactory.cpp  MeshFactory.h  README.md  RotatingSquare.cpp  RotatingSquare.h  Scene.h  Shader.cpp  Shader.h  Triangle.cpp  Triangle.h  UniformType.cpp  UniformType.h  Utils.cpp  Utils.h  Window.cpp  Window.h  anotacoes_linux_mac.txt  main.cpp  shader.vert
Linux/: ArrayBuffer.cpp  ArrayBuffer.h  CMakeLists.txt  IndexBuffer.cpp  Scene.h  Triangle.cpp  Triangle.h  Window.cpp  Window.h  main.cpp  shader.vert
shader/: phong.frag  shader.frag  shader.vert
